--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,6 +3,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro'
 import FormattedDate from '../../components/FormattedDate.astro'
 import type { GetStaticPaths } from 'astro'
 import { getCollection, type CollectionEntry } from 'astro:content'
+import RightArrowIcon from '../../icons/RightArrowIcon.astro'
 
 export const getStaticPaths = (async () => {
   const blog = await getCollection('blog')
@@ -21,7 +22,7 @@ const { Content } = await post.render()
 ---
 
 <BaseLayout title={post.data.title} class="scroll-smooth scroll-p-24">
-  <article slot="header" class="mb-20 min-h-[1px]">
+  <article slot="header" class="mb-14 md:mb-20 min-h-[1px]">
     {
       post.data.mainImg && (
         <picture class="block bg-[#171717]">
@@ -36,7 +37,17 @@ const { Content } = await post.render()
       )
     }
   </article>
-  <section class="mb-24 md:text-center">
+  <section class="mb-12 md:mb-24 md:text-center">
+    <p class="text-left mb-4 hidden md:block text-textColor-teriary">
+      <a href="/blog">
+        <i>
+          <RightArrowIcon
+            class="rotate-180 inline-block"
+          />
+        </i>
+        Blog
+      </a>
+    </p>
     <p class="mb-2"><FormattedDate date={post.data.pubDate} /></p>
     <h1 class="text-4xl md:text-5xl font-bold text-textColor-primary mb-2 md:mb-4">
       {post.data.title}
@@ -44,10 +55,13 @@ const { Content } = await post.render()
     <p class="text-lg"><em>{post.data.description}</em></p>
   </section>
   <article
-    class="prose prose-lorem dark:prose-invert prose-img:rounded-lg prose-code:before:content-[''] prose-code:after:content-[''] prose-code:bg-preColor prose-code:p-1 prose-code:rounded-md prose-h1:text-4xl prose-h1:text-center prose-h2:border-b prose-h2:pb-1 prose-h2:border-borderColor-gray prose-h2:text-3xl prose-h3:italic max-w-none"
+    class="prose prose-lorem dark:prose-invert md:prose-lg prose-img:rounded-lg prose-code:before:content-[''] prose-code:after:content-[''] prose-code:bg-preColor prose-code:p-1 prose-code:rounded-md prose-h1:text-4xl prose-h1:text-center prose-h2:border-b prose-h2:pb-1 prose-h2:border-borderColor-gray prose-h2:text-3xl prose-h3:italic max-w-none"
   >
     <Content />
   </article>
+  <div class="mt-[56vh] mb-[4vh] text-center">
+    <p class="text-textColor-teriary"><em>[Espacio en blanco para mejor lectura]</em></p>
+  </div>
 </BaseLayout>
 
 <script>
