tiempo de lectura y ancho del blog

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,9 +1,9 @@
 ---
-import HeaderLink from '../HeaderLink.astro'
-import { URLS_MAP } from '../../consts.ts'
+import HeaderLink from "../HeaderLink.astro"
+import { URLS_MAP } from "../../consts.ts"
 ---
 
-<footer class="max-w-screen-md mx-auto p-6">
+<footer class="max-w-screen-lorem mx-auto p-6">
   <article class="w-28 mb-12 mt-14">
     {
       URLS_MAP.map(({ href, title }) => (
