--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -7,11 +7,11 @@ import { URLS_MAP } from "../../consts"
 <div class="mb-[118px]">
   <article
     id="header-container"
-    class="fixed top-0 left-0 w-full bg-background/50 backdrop-blur-md border-b border-borderColor-gray z-20 transition-all"
+    class="fixed top-0 left-0 w-full bg-background/80 backdrop-blur-md border-b border-borderColor-gray z-20 transition-all"
   >
     <div
       id="header-content"
-      class="max-w-screen-md mx-auto flex justify-between py-4 px-6 transition-all"
+      class="max-w-screen-2xl mx-auto flex justify-between py-4 px-6 md:px-8 transition-all"
     >
       <a href="/" class="active:scale-90 transition-transform">
         <img
