--- a/src/components/ui/Quote.astro
+++ b/src/components/ui/Quote.astro
@@ -9,22 +9,20 @@ const { quote, cite, class: className } = Astro.props
 ---
 
 <div
-  class="relative w-[100vw] left-[50%] right-[50%] mx-[-50vw] bg-quotesColor"
+  class="bg-quotesColor/60 px-4 rounded-lg border-x-2 border-borderColor-accent/60"
 >
-  <div class="max-w-screen-md mx-auto">
-    <blockquote
-      class:list={[
-        'max-w-screen-sm text-right py-6 pr-4 md:pr-0 rounded-none border-0 my-10 ml-auto p-0',
-        className,
-      ]}
-    >
-      <q
-        class="italic text-lg md:text-xl text-textColor-primary"
-        set:html={quote}
-      />
-      <div class="mt-4">
-        <cite class="text-right text-textColor-secondary" set:html={cite} />
-      </div>
-    </blockquote>
-  </div>
+  <blockquote
+    class:list={[
+      "text-right pr-4 py-6 md:pr-0 rounded-none border-0 ml-auto",
+      className,
+    ]}
+  >
+    <q
+      class="italic text-lg md:text-xl text-textColor-primary"
+      set:html={quote}
+    />
+    <div class="mt-4">
+      <cite class="text-right text-textColor-secondary" set:html={cite} />
+    </div>
+  </blockquote>
 </div>
