--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import HeadCommon from '../components/seo/HeadCommon.astro'
-import Header from '../components/Header/Header.astro'
-import Footer from '../components/Footer/Footer.astro'
-import BaseStyles from '../components/GlobalStyles.astro'
-import { SITE } from '../consts.ts'
+import HeadCommon from "../components/seo/HeadCommon.astro"
+import Header from "../components/Header/Header.astro"
+import Footer from "../components/Footer/Footer.astro"
+import BaseStyles from "../components/GlobalStyles.astro"
+import { SITE } from "../consts.ts"
 
 type Props = {
   title?: string
@@ -14,7 +14,7 @@ const { title, class: className } = Astro.props
 ---
 
 <!doctype html>
-<html lang="es" class:list={['dark font-serif', className]}>
+<html lang="es" class:list={["dark font-serif", className]}>
   <head class="min-h-screen">
     <HeadCommon
       title={title ? title : SITE.TITLE}
@@ -24,13 +24,12 @@ const { title, class: className } = Astro.props
     <BaseStyles />
   </head>
 
-  <body class="dark:bg-background dark:text-textColor-secondary break-words overflow-x-hidden">
+  <body
+    class="dark:bg-background dark:text-textColor-secondary break-words overflow-x-hidden"
+  >
     <Header />
     <slot name="header" />
-    <main
-      class="px-6 mx-auto max-w-screen-md min-h-screen"
-      transition:animate="none"
-    >
+    <main class="px-6 mx-auto min-h-screen">
       <slot />
     </main>
     <Footer />
@@ -40,7 +39,7 @@ const { title, class: className } = Astro.props
         position: fixed;
         left: 0;
         top: 0;
-        content: '';
+        content: "";
         width: 100dvw;
         height: 100dvh;
         z-index: -1;
@@ -49,7 +48,7 @@ const { title, class: className } = Astro.props
         filter: contrast(2) saturate(2);
       }
       body::before {
-        background: url('/noise-texture.webp');
+        background: url("/noise-texture.webp");
       }
     </style>
   </body>
